--- a/resource/convert2movUI.ui
+++ b/resource/convert2movUI.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>批量图片序列转MOV</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="LOGO.qrc">
+    <normaloff>:/resource/LOGO.png</normaloff>:/resource/LOGO.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
@@ -58,6 +62,8 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="LOGO.qrc"/>
+ </resources>
  <connections/>
 </ui>
